# op1

lab_1/: CMakeLists.txt  main.cpp
lab_2/: main.cpp
